Use qt_mac_effectiveview_for for setFocus_sys

Currently setFocus_sys use qt_mac_nativeview_for to set the focus which
triggers a bug rerouting the key events through NSMenu rather that
directly to the correct widget. Get the effective id returns the
correct widget. This changeset applies the patch proposed in the bug
report

Task-number: QTBUG-34371
Change-Id: I0831f41ca409ff309954bb45a50975dd4eb1406a
Reviewed-by: Morten Johan Sørvig <morten.sorvig@digia.com>